<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/select_year"
        android:textAppearance="@style/main_style"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <NumberPicker
        android:id="@+id/yearPicker"
        android:layout_width="360dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="@+id/select_button"
        app:layout_constraintStart_toStartOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/title"></NumberPicker>

    <Button
        android:id="@+id/cancel_button"
        style="@style/main_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"></Button>

    <Button
        android:id="@+id/select_button"
        style="@style/main_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="26dp"
        android:text="@string/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearPicker"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>