<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|top"
        android:maxLines="1"
        android:textAppearance="@style/main_title_style"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck"
        android:text="@string/search_settings" />

    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/settings_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/search_show"
        android:layout_marginStart="26dp"
        android:textAppearance="@style/movie_genre_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button">

    </TextView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_show">

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:text="@string/all"
            android:textColor="#FFFFFF"
            app:chipBackgroundColor="#3D3BFF" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:text="@string/movies"
            android:textColor="@color/textColor"
            app:chipBackgroundColor="@color/chip_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settings_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:text="@string/series"
            android:textColor="@color/textColor"
            app:chipBackgroundColor="@color/chip_background">

        </com.google.android.material.chip.Chip>
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/settings_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="26dp"
        android:text="@string/country"
        android:textAppearance="@style/main_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group">
    </TextView>

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_country_title">

    </Spinner>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/country_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_spinner">
    </com.google.android.material.divider.MaterialDivider>

    <TextView
        android:id="@+id/settings_genre_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/genre"
        android:textAppearance="@style/main_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_divider">
    </TextView>

    <Spinner
        android:id="@+id/genre_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_genre_title">

    </Spinner>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/genre_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre_spinner">
    </com.google.android.material.divider.MaterialDivider>

    <TextView
        android:id="@+id/settings_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/rating"
        android:textAppearance="@style/main_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_divider" />

    <TextView
        android:id="@+id/settings_rating_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:textAppearance="@style/additional_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_rating_title"
        tools:text="20">

    </TextView>


    <TextView
        android:id="@+id/yearFrom_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/year_from"
        android:textAppearance="@style/main_style"
        app:layout_constraintBottom_toBottomOf="@+id/yearFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yearFrom" />

    <Button
        android:id="@+id/yearFrom"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:clickable="true"
        style="@style/main_style"
        android:descendantFocusability="blocksDescendants"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre_divider" />

    <TextView
        android:id="@+id/yearTo_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/year_to"
        android:textAppearance="@style/main_style"
        app:layout_constraintBottom_toBottomOf="@+id/yearTo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yearTo"/>

    <Button
        android:id="@+id/yearTo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="26dp"
        android:clickable="true"
        style="@style/main_style"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearFrom">

    </Button>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/year_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearTo">
    </com.google.android.material.divider.MaterialDivider>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rating_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:valueFrom="1.0"
        android:valueTo="10.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_rating_title"
        app:thumbColor="@color/white"
        app:thumbStrokeColor="@color/black"
        app:thumbStrokeWidth="2dp"
        app:tickColor="@color/white"
        app:values="@array/initial_slider_values" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/rating_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_slider">
    </com.google.android.material.divider.MaterialDivider>

    <TextView
        android:id="@+id/textview_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/search_sort"
        android:textAppearance="@style/movie_genre_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_divider">

    </TextView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/sort_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_sort">

        <com.google.android.material.chip.Chip
            android:id="@+id/date_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:text="@string/date"
            android:textColor="#FFFFFF"
            app:chipBackgroundColor="#3D3BFF" />

        <com.google.android.material.chip.Chip
            android:id="@+id/popularity_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:text="@string/popularity"
            android:textColor="@color/textColor"
            app:chipBackgroundColor="@color/chip_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/rating_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:text="@string/rating"
            android:textColor="@color/textColor"
            app:chipBackgroundColor="@color/chip_background">

        </com.google.android.material.chip.Chip>
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/sort_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_chip_group">
    </com.google.android.material.divider.MaterialDivider>

    <ImageView
        android:id="@+id/hide_watched_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:clickable="true"
        android:focusable="true"
        tools:src="@drawable/seen_off_icon"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_divider"/>

    <TextView
        android:id="@+id/hide_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_Watched"
        android:maxLines="1"
        android:layout_marginStart="13dp"
        android:textAppearance="@style/main_style"
        app:layout_constraintStart_toEndOf="@+id/hide_watched_imageview"
        app:layout_constraintTop_toTopOf="@+id/hide_watched_imageview">
    </TextView>

    <Button
        android:id="@+id/button_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:text="@string/accept"
        style="@style/main_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hide_watched" />


</androidx.constraintlayout.widget.ConstraintLayout>


