<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/person_back_button"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_above="@+id/photo"
        android:background="@drawable/back_icon"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fullscreenPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

    </ImageView>


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_horizontal|top"
        android:maxLines="1"
        android:textAppearance="@style/main_title_style"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck"
        tools:text="Ivan Ivanov" />

    <TextView
        android:id="@+id/profession_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/career"
        android:textAppearance="@style/actorpage_style"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/name">

    </TextView>

    <TextView
        android:id="@+id/profession_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profession_category"
        app:layout_constraintTop_toTopOf="@+id/profession_category"
        tools:text="Actor">

    </TextView>

    <TextView
        android:id="@+id/sex_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/sex"
        android:textAppearance="@style/actorpage_style"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/profession_info">

    </TextView>

    <TextView
        android:id="@+id/sex_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sex_category"
        app:layout_constraintTop_toTopOf="@+id/sex_category"
        tools:text="Male">

    </TextView>

    <TextView
        android:id="@+id/age_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/age"
        android:textAppearance="@style/actorpage_style"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/sex_info">

    </TextView>

    <TextView
        android:id="@+id/age_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/age_category"
        app:layout_constraintTop_toTopOf="@+id/age_category"
        tools:text="54">

    </TextView>

    <TextView
        android:id="@+id/birthday_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/birthday"
        android:textAppearance="@style/actorpage_style"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/age_info">

    </TextView>

    <TextView
        android:id="@+id/birthday_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birthday_category"
        app:layout_constraintTop_toTopOf="@+id/birthday_category"
        tools:text="12/02/1994">

    </TextView>

    <TextView
        android:id="@+id/death_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/death"
        android:textAppearance="@style/actorpage_style"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/birthday_category">

    </TextView>

    <TextView
        android:id="@+id/death_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/death_category"
        app:layout_constraintTop_toTopOf="@+id/death_category"
        tools:text="15/02/2021">

    </TextView>

    <TextView
        android:id="@+id/best_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/main_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        android:text="@string/best">

    </TextView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/best_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/best_textview">
    </androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:id="@+id/filmography_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/filmography"
        android:layout_marginBottom="30dp"
        android:textAppearance="@style/main_style"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <TextView
        android:id="@+id/all_films"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="@+id/filmography_title"
        app:layout_constraintTop_toBottomOf="@+id/filmography_title"
        tools:text="45 фильмов">

    </TextView>

    <TextView
        android:id="@+id/to_filmography_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/filmography_title"
        android:textAppearance="@style/all_button_style"
        app:layout_constraintEnd_toStartOf="@+id/to_filmography_imageview"
        app:layout_constraintTop_toTopOf="@+id/filmography_title"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/to_filmography">

    </TextView>

    <ImageView
        android:id="@+id/to_filmography_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:src="@drawable/open_all_icon"
        app:layout_constraintBottom_toBottomOf="@+id/filmography_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filmography_title">

    </ImageView>
    <com.example.android_coursework_lvl1.customviews.CustomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>